# ChangeLog for sci-chemistry/tm-align
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/tm-align/ChangeLog,v 1.17 2015/05/17 20:19:32 pacho Exp $

  17 May 2015; Pacho Ramos <pacho@gentoo.org> tm-align-20140601.ebuild:
  ppc64 stable wrt bug #549332

  15 May 2015; Pacho Ramos <pacho@gentoo.org> tm-align-20140601.ebuild:
  ppc stable wrt bug #549332

  13 May 2015; Agostino Sarubbo <ago@gentoo.org> tm-align-20140601.ebuild:
  Stable for x86, wrt bug #549332

  13 May 2015; Agostino Sarubbo <ago@gentoo.org> tm-align-20140601.ebuild:
  Stable for amd64, wrt bug #549332

  13 May 2015; Jack Morgan <jmorgan@gentoo.org> tm-align-20130511.ebuild:
  ppc64 stable wrt bug #544934

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> tm-align-20130511.ebuild:
  ppc stable wrt bug #544934

  19 Apr 2015; Agostino Sarubbo <ago@gentoo.org> tm-align-20130511.ebuild:
  Stable for x86, wrt bug #544934

  08 Apr 2015; Agostino Sarubbo <ago@gentoo.org> tm-align-20130511.ebuild:
  Stable for amd64, wrt bug #544934

*tm-align-20140601 (29 Mar 2015)

  29 Mar 2015; Justin Lecher <jlec@gentoo.org> +tm-align-20140601.ebuild,
  -tm-align-20120124.ebuild, -tm-align-20120707.ebuild:
  Version Bump; drop old

  09 Feb 2015; Anthony G. Basile <blueness@gentoo.org> tm-align-20120707.ebuild,
  tm-align-20130511.ebuild:
  Keyword ~ppc64, bug #452010.

*tm-align-20130511 (12 May 2013)

  12 May 2013; Justin Lecher <jlec@gentoo.org> -tm-align-20130508.ebuild,
  +tm-align-20130511.ebuild:
  Version Bump, remove broken version

*tm-align-20130508 (11 May 2013)

  11 May 2013; Justin Lecher <jlec@gentoo.org> +tm-align-20130508.ebuild,
  metadata.xml:
  Version Bump

  05 Feb 2013; Ulrich Müller <ulm@gentoo.org> tm-align-20120124.ebuild,
  tm-align-20120707.ebuild:
  Specify LICENSE more precisely, bug 455568.

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> tm-align-20120707.ebuild:
  Add ~ppc, wrt bug #452010
