@@ -1,17 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX CMakeLists.txt 182 SHA256 e6543e2fba46dc09d1892106b1d9c154485ee269d2b88c16a1973605fae44b53 SHA512 1e77edbfb2184e11c09fc2133eb40bd9d4b2fb04a30139134939482f4e817ebfa5c316e8d75a6fd5aa866ef1f6f56d65df924dc41cfb698330943e0bc433948d WHIRLPOOL 370a6b0e2ba20b7c7316aaba34b6dd6962673014fa7d2aee8ae04630b98abb24f5302eca80ea4c92d84fea149c98003d4b5c1ac44266a488cc937f06f51f6192
-DIST TMtools20130511.tar.gz 934272 SHA256 8d721481ce481085fe7fc2dde0d374dd7b5f0a6242702c77d194deb7fc8417b7 SHA512 aad15e7d71f9aaab1e7268e5e8b410de8917a9a3a41d5c3ad09e2a4beb8fc8240b78662a0389d2772ebeac9921a79b86bd44316b1ea7d9bbde566a610f7bf5ae WHIRLPOOL e6628255a22022db2a5deef8b6b356a36b588561a7576b571bb0ce3ca030ebe31076f0b4965ccde73f15969eba1c397810115b892cd9e87e97040dcb11fddfab
 DIST TMtools20140601.tar.gz 934391 SHA256 5032f7ab1824c8b2191b4a3667e1405feb6ccf7c900f57632aa506fff8ec1bf5 SHA512 99b90425ff051c836e19225601ddfb1576bec9c8f233aafeba96075f924a3c0892b5b1cfef36254ff5ef468a6dbf64f7fcc9a3ce24a0d869b3c1eb87c0149765 WHIRLPOOL 5ba7d9cb71e3055dff62851c68e127314b9ca70c4bbc39aeba35e5a4b02dc0cffeacb52c6369c90875d8062603c830acf604cfc339bdecfeb3dd6c10015e20de
-EBUILD tm-align-20130511.ebuild 817 SHA256 28543aae1e07349b2a3faa37022d2fc1db9bc37fc9f350367554a5ef285214f0 SHA512 f5da70b09383ee187755336b0d10e0c7dc9b1d594ef48f56699c5a9fbde46d7a271417fa8cf6623e845faa3b8c0de2f7f5e397bb28be1a9f52dc5573922ad8fa WHIRLPOOL 353d7d11d22482833fe08c3504ae1bf8cbd1314b95d66e30697980cfd33dc334d4aa83eeb234b8357dba35f51cd68676726d307f931c989de1e6aafeb5571b4b
 EBUILD tm-align-20140601.ebuild 815 SHA256 adadc82b4b408d90087dd9df02464a53bef24cf7d44f1babb9b5575fd1da8f72 SHA512 102ba209b49b9263a170832b782554ac7639c94e58952d84d2dd7cd7eaa8814add690b016422ce42327dc9c66094cdeca1c9ddc1f6e47fb528daaa7352b8941f WHIRLPOOL 3fcbb93570b54787aa660aa3162a2733f22f653b64fb118a179de2fc9d8f3014969a4e4de7f7fdd803347d0a70b429d1075064c5d24f08e195f7bcbbb19f4ae7
-MISC ChangeLog 2304 SHA256 2c7d393c9ce71596dea2821609532c43b3d06f9ac85ec70a2142e7f88e99c422 SHA512 e6e66d34966d8754b17f3da441e62e6838897de114601a64ddd4889fa645652b9617c5e4f31c7675ad7141bc29b2f19d2c94c00ce8fda9ea2b7d490c1f06b3eb WHIRLPOOL 58d68c80bf5d37922eb0a89068d4623b127ca234efbd9a3ec843707171e17fbbb660eb4c0aedad94861d81b4a2b6bab92d6d89c6928676ad49ba5eccdde02a3a
+MISC ChangeLog 2389 SHA256 f157cdec36f5cba4376118b523b8e33fda88ccaa37996d28bc16575d03dd556d SHA512 05b4f47350faa98113ab210b56cd95d18c0f4bc08f64b1c3536f48e992687a0e44f36532be1c1d8e2d16185c13b6785a6728e7976b81fd623ac46a6503e39a57 WHIRLPOOL e0d90cf549cfecd1fb4c9af270ad5b4a73b95d10086044414b58114fca3bcee5676925eaa8b911158e539522dd157517e3d17374a9ebafaff40affc4543f206f
 MISC metadata.xml 1257 SHA256 73dc4e2f6cf1c2318fa6c1b70746496268504d29e7eb9285a35c2921362de352 SHA512 120eeef02ef1d867cce7c65ab7b4d3d286502fb36397facf093f3fe77dddf4530ad7858c20e7e58edc87850fc435a0492335b5e18b08b18653b7d4b18e415dd5 WHIRLPOOL 9748dff6b7ea8f3f6387f270b8c93d856031ba3b941ff9eac7f73712e673bc126dffaecc0eb328733bb43fbc7e7989edfe213b6c0f5bbc3db6f08e9f36273e7d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlVY99YACgkQCaWpQKGI+9QXwACfVvi8h+6+l41VdQr782kq3qyX
-n/8AnixquLLntVbzjxynSEkjUKrTH05/
-=ORN8
+iQJ8BAEBCgBmBQJVWYdlXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiG1sP/Rei3pcI0jLwGJQT29yWP4YY
+v4JKSZ1g9IRM9g9v1vtw3yzua4SVzambKbj0kRwPXo2nd64k+UvKIHlsiFqe+g1d
+ELS9KdKqcbB4jYtLbTnGv+0y73VqF471kjujkRNVCYxyEXPfhwUKn9nsj8hUhBaj
+zw7o5tiPwFxGYanmzKQ4AzQzwJt3eRFKy1W6ZMcER+BbiS7idJj/pOqGtjeO1b6+
+0cnhzhTH4P1E6e9gIuGRNj9olCRiFfOIVlkE6Mv5oRXUh933qiMq603vLZnJNtz6
+OHl171r0xPF438+c66cEqenJNznfAPxg9jGXlMj4ySz1ScWvE0mWEET+uN2NuldF
+jrPv+n8sII4cXFvkpNtIYUC2JMB4KsUmgk+i9QiwbarW2M6KVW8+jv2EPgDB4eYB
+vIQvV0+Iw+oWLRXyMT6N0Z3b4Nd3Tx6IUvQp2MfJAVcljgAmzTa9SW2Y5oG2o8yC
+RFcJt03/FM6A6K1B7GSRaSJ6FHuwPX1u17yq6ymVWcuXHOgJf9HqX5ABqRD06nen
+9RpkdYlmLjb5eTDBh+QVw5ujrK1XpO9kY4kbanHH4qz6BBqRsCrUQrABvxHbhy4G
+TH9NyMAAtkrSygnV/9pMUh34CgbkzPxj6NvE/HwCDwR8Pwi9mkhSl5oHl7TLWwOy
++0yOSEk5Up6lQbK6xuSZ
+=LTyt
 -----END PGP SIGNATURE-----
