@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/tm-align
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/tm-align/ChangeLog,v 1.17 2015/05/17 20:19:32 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/tm-align/ChangeLog,v 1.18 2015/05/18 06:32:09 jlec Exp $
+
+  18 May 2015; Justin Lecher <jlec@gentoo.org> -tm-align-20130511.ebuild:
+  Drop old
 
   17 May 2015; Pacho Ramos <pacho@gentoo.org> tm-align-20140601.ebuild:
   ppc64 stable wrt bug #549332
